--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.+'
     compile 'com.netflix.rxjava:rxjava-android:0.15.1'
 }
